# explorer

./: .gitignore  README.md  build-and-package.ps1  build-windows.bat  build-windows.ps1  check-build-status.ps1  check-build-windows.bat  check-build.sh  create-distribution.ps1  create-installer.ps1  package-lock.json  package.json
backend/: ARCHITECTURE.md  BUGFIX.md  Cargo.toml  README.md  SYSTEM_DB.md  access-db.sh  start.sh  test.nsql  test_fixed.db  test_new_endpoints.sh  test_system_db.sh
backend/src/: document_parser.rs  main.rs  system_db.rs
frontend/: MANAGEMENT_FEATURES_UI.md  README.md  UI_VISUAL_GUIDE.md  index.html  package-lock.json  package.json  start.sh  tailwind.config.js  vite.config.ts
frontend/src/: App.css  App.tsx  api.ts  index.css
frontend/src/components/: ConnectionHistory.tsx  Layout.tsx  VectorVisualization.tsx
frontend/src/pages/: Explorer.tsx  Home.tsx  SystemMonitor.tsx
frontend/src/utils/: fileParser.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs  system_db.rs
