[package]
name = "keradb-labs"
version = "0.1.0"
edition = "2021"

[dependencies]
keradb = { path = "../../" }
actix-web = "4.4"
actix-cors = "0.7"
actix-multipart = "0.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.35", features = ["full"] }
env_logger = "0.11"
log = "0.4"
parking_lot = "0.12"
chrono = { version = "0.4", features = ["serde"] }
futures-util = "0.3"

# Document parsing
pdf-extract = "0.7"
docx-rs = "0.4"
calamine = "0.26"
zip = "2.2"
quick-xml = "0.37"

[dev-dependencies]
actix-rt = "2.9"
